@@ -1,5 +1,11 @@
 2009-02-10  Ross Burton  <ross@linux.intel.com>
 
+	* src/sj-prefs.c:
+	Handle the file or path pattern combo containing a custom
+	combo (#339089).
+
+2009-02-10  Ross Burton  <ross@linux.intel.com>
+
 	* libjuicer/sj-extracting.c:
 	Fix a brainfart.
 
